--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ author:
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=vO1Nk-YAAAAJ"
-  email            : "weiwanli-heu@hrbeu.edu.cn" weiwanli-heu@hrbeu.edu.cn
+  email            : "weiwanli-heu@hrbeu.edu.cn"
   researchgate     :  # e.g., "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
